kustomization/overlays/prod/proton-mail/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    hogs.tswn.us/traefik-route: "true"
  name: this-is-ignored-but-is-required
